<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Here Boss</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="latHeading">Lattitude:</string>
    <string name="clockOut">Clock out</string>
    <string name="clockIn">Clock In/Out</string>
    <string name="longHeading">"Longitude: "</string>
    <string name="lat">" "</string>
    <string name="lon">"  "</string>
    <string name="name">Name</string>
    <string name="bossEmail">Enter Boss\'s Email Address</string>
    <string name="send">Send</string>

</resources>
