<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <DigitalClock
        android:id="@+id/digitalClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center_horizontal" >

    <TextView
        android:id="@+id/latHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latHeading" />

    <TextView
        android:id="@+id/latTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lat" />

</LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    android:gravity="center_horizontal" >

    <TextView
        android:id="@+id/longHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longHeading" />

    <TextView
        android:id="@+id/longTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lon" />

</LinearLayout>

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name" >

        <requestFocus />
    </EditText>
       
    <Button
        android:id="@+id/clockIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/clockIn" />




</LinearLayout>
